// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/link_tooltip/link_tooltip should match snapshot 1`] = `
<Fragment>
  <div
    className="tooltip-container"
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
        "left": -1000,
        "position": "absolute",
        "top": -1000,
        "zIndex": 1070,
      }
    }
  >
    <Connect(Pluggable)
      href="www.test.com"
      pluggableName="LinkTooltip"
      show={false}
    />
  </div>
  <span
    data-channel-mention="somechannel"
    data-hashtag="#somehashtag"
    data-link="somelink"
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
  >
    test title
  </span>
</Fragment>
`;

exports[`components/link_tooltip/link_tooltip should match snapshot with uncommon link structure 1`] = `
<Fragment>
  <div
    className="tooltip-container"
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
        "left": -1000,
        "position": "absolute",
        "top": -1000,
        "zIndex": 1070,
      }
    }
  >
    <Connect(Pluggable)
      href="https://www.google.com"
      pluggableName="LinkTooltip"
      show={false}
    />
  </div>
  <span
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
  >
    <span
      className="codespan__pre-wrap"
    >
      <code>
        foo
      </code>
    </span>
     and 
    <span
      className="codespan__pre-wrap"
    >
      <code>
        bar
      </code>
    </span>
  </span>
</Fragment>
`;
